Added links to stylesheets

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <div id="banner-image">
 	<div class="overlay">
 		<div class="header-content">
