--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+	<title>Nicholas Winton - The Hero of the Kindertransport</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
